# PretextSnapshot

./: .gitignore  .gitmodules  .travis.yml  ColourMapData.cpp  LICENSE  PretextSnapshot.cpp  README.md  TextureLoadQueue.cpp  install  meson.build  test_pretextsnapshot.py
.github/workflows/: deploy.yml  test.yml
include/: Header.h  avir.h  avir_dil.h  avir_float4_sse.h  avir_float8_avx.h  avx_mathfun.h  libdeflate.h  mpc.h
